tests/ui/match/assoc-const-pattern-binding-suggestion.stderr
error[E0308]: mismatched types
  --> $DIR/assoc-const-pattern-binding-suggestion.rs:12:9
   |
LL |     const K: i32 = 0;
   |     ------------ associated constant defined here
...
LL |     match source {
   |           ------ this expression has type `Scrutinee`
LL |         Inherent::K => {}
   |         ^^^^^^^^^^^ expected `Scrutinee`, found `i32`

error[E0308]: mismatched types
  --> $DIR/assoc-const-pattern-binding-suggestion.rs:19:9
   |
LL | const FREE: i32 = 0;
   | --------------- constant defined here
...
LL |     match source {
   |           ------ this expression has type `Scrutinee`
LL |         FREE => {}
   |         ^^^^
   |         |
   |         expected `Scrutinee`, found `i32`
   |         `FREE` is interpreted as a constant, not a new binding
   |
help: introduce a new binding instead
   |
LL -         FREE => {}
LL +         other_free => {}
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
